other protocols (Whois,DAS,RRI,RRP) or transports *might* not work in this version, however EPP over HTTPS is working.

#### New gTLDS
= Fix UniRegistry Contacts/Polls issue
+ Added CRR (Charleston Road Regisry) DRD and to NGTLD drd
+ Add KSRegistry (NGTLD only)
= Split MAM to MAM and MAMSRS as the latter are their clients have have dedicated EPP servers

#### ccTLDs
= Protocol/EPP/Extensions/NO/Domain : bugfix on the deleteDate parameter handling - form Net-DRI-0.96_05.no.1.0.1_1 (Jørgen Thomsen/Trond Haugen)
= Added Depricated versions of SE DRD and Contact objects for backwards compatability (Jan Saell)

0.96_06_tdw_03 2014-03-28 DEVELOPMENT RELEASE
!! Note, this is not an official release !!

See warning in 0.96_01: this version enables only EPP over TCP/TLS and IRIS DCHK over UDP,
other protocols (Whois,DAS,RRI,RRP) or transports *might* not work in this version, however EPP over HTTPS is working.

#### Core
+ DRI option identify_client (disabled by default) will prepend the Net-DRI version to the clTRID

#### New gTLDS
= Updated launch/idnmap/smd drafts (versions only, no real changes)
= Enabled CoreNIC Launchphase
= Fix NGTLD default object types + PIR & CORENIC
= Updated NGTLD: split Afilias int Afilias, Afilias-SRS, and PIR, and added bep_type for shared/dedicated beps to detect tlds etc.
= IDN object now detects extlang (eg zh-tw)
= LaunchPhase extension updated to support multiple launch extensions in create command (e.g. for DPML override)
= NGTLD DRD updates _has_bep_key and verify name rules updates
+ Neustar FEE extension
+ CentralNIC Fee Extension (from Paulo Jorge)
+ GMO DRD

#### gTLDS
= Updated Neustar+Afilias_Verisign IDN units to accept the IDN object, or if not avail fall back to $rd->{language}
= Merged some afilias/neustar test files


0.96_06_tdw_02 2014-03-11 DEVELOPMENT RELEASE
!! Note, this is not an official release !!

See warning in 0.96_01: this version enables only EPP over TCP/TLS and IRIS DCHK over UDP,